# pytest-threadpool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: __init__.py
examples/test_di/: conftest.py  container.py  providers.py  services.py  test_factory.py  test_local.py  test_singleton.py  test_thread_local.py
examples/test_event_bus/: event_bus.py  test_event_bus.py
examples/test_logging/: test_file_logging.py  test_log_capture.py  test_print_capture.py
examples/test_queue/: conftest.py  test_queue.py  user_pool.py
examples/test_shared_state/: test_barrier.py  test_counter.py  test_counter_async.py  test_shared_dict.py  test_shared_dict_async.py  test_shared_list.py  test_shared_list_async.py
hooks/: pre-commit
scripts/: setup-dev
src/pytest_freethreaded/: __init__.py  _api.py  _constants.py  _fixtures.py  _grouping.py  _markers.py  _runner.py  plugin.py
src/pytest_threaded/: __init__.py  _constants.py  _grouping.py  plugin.py
src/pytest_threadpool/: __init__.py  _api.py  _constants.py  _fixtures.py  _grouping.py  _live_view.py  _markers.py  _runner.py  hooks.py  plugin.py
src/pytest_threadpool/_live_view/: __init__.py  _ansi.py  _buffer.py  _cursor.py  _display.py  _field.py  _input.py  _layout.py  _scroll_column.py  _status_line.py  _tree_overlay.py  _view_manager.py
tests/: __init__.py  conftest.py  markers.py  test_class_parallel.py  test_fixtures.py  test_module_functions.py  test_module_parallel.py  test_parallel_scopes.py  test_pytester_class.py  test_pytester_edge_cases.py  test_pytester_fixtures.py  test_pytester_marks.py  test_pytester_package.py  test_pytester_reporting.py  test_pytester_scopes.py  test_pytester_sequential.py  test_pytester_shared.py  test_pytester_xunit.py  test_shared_state.py  test_xunit_style.py
tests/cases/: _templates.py  class_barrier_concurrency.py  class_single_method.py  class_thread_verification.py  edge_cross_module_group.py  edge_keyboard_interrupt.py  edge_nested_threads.py  edge_sigint.py  edge_sigint_many.py  edge_system_exit.py  fixture_autouse_function.py  fixture_class_scoped_once.py  fixture_class_yield.py  fixture_function_scoped.py  fixture_interdependent_finalizers.py  fixture_multiple_scopes.py  fixture_parameterized.py  fixture_teardown_exception.py  fixture_yield_cleanup.py  marks_custom.py  marks_standard.py  parallel_only_skip.py  reporting_cross_module.py  reporting_incremental.py  reporting_incremental_conftest.py  reporting_package_children.py  scope_all_merged.py  scope_all_not_parallelizable.py  scope_children_separate_params.py  scope_dynamic_parametrize.py  scope_method_overrides_class.py  scope_module_children.py  scope_not_parallelizable_function.py  scope_not_parallelizable_method.py  scope_parameters.py  sequential_bare_functions.py  sequential_unmarked_class.py  setup_all_fail.py  setup_mixed_pass_fail.py  shared_counter.py  (+11 more)
tests/integration_tests/: conftest.py  test_caplog.py  test_capture.py  test_ide_reporter.py  test_live_view.py  test_logging.py  test_pytester_class.py  test_pytester_edge_cases.py  test_pytester_fixtures.py  test_pytester_func_fixtures.py  test_pytester_marks.py  test_pytester_package.py  test_pytester_parallel_teardown.py  test_pytester_reporting.py  test_pytester_scopes.py  test_pytester_sequential.py  test_pytester_shared.py  test_pytester_xunit.py  test_scoped_output.py
tests/integration_tests/cases/: caplog_parallel.py  capture_print_parallel.py  capture_scoped_output.py  capture_two_groups.py  class_barrier_concurrency.py  class_single_method.py  class_thread_verification.py  collected_count.py  edge_first_item_setup_fail.py  edge_keyboard_interrupt.py  edge_maxfail_parallel.py  edge_nested_threads.py  edge_sigint.py  edge_sigint_many.py  edge_system_exit.py  edge_teardown_exception.py  edge_worker_exception.py  edge_worker_exception_conftest.py  fixture_autouse_function.py  fixture_class_across_groups.py  fixture_class_scoped_once.py  fixture_class_yield.py  fixture_func_addfinalizer.py  fixture_func_chain.py  fixture_func_from_conftest.py  fixture_func_from_conftest_conftest.py  fixture_func_implicit_scope.py  fixture_func_mixed_parallel.py  fixture_func_multiple_per_test.py  fixture_func_setup_parallel.py  fixture_func_with_shared_deps.py  fixture_func_with_tmp_path.py  fixture_func_with_xunit.py  fixture_func_yield_teardown.py  fixture_function_scoped.py  fixture_interdependent_finalizers.py  fixture_module_across_groups.py  fixture_multiple_scopes.py  fixture_package_across_groups.py  fixture_parameterized.py  (+54 more)
tests/pkg_parallel/: __init__.py  _state.py  test_mod_a.py  test_mod_b.py  test_mod_c_verify.py  test_mod_d_class_override.py
tests/pkg_parallel/sub/: __init__.py  _state.py  test_sub_a.py  test_sub_b.py  test_sub_verify.py
tests/pkg_parallel/sub_override/: __init__.py  test_override.py
tests/unit_tests/: __init__.py  test_unit_api.py  test_unit_fixtures.py  test_unit_grouping.py  test_unit_markers.py  test_unit_plugin.py  test_unit_runner.py  test_unit_stream_proxy.py
tests/unit_tests/live_view/: conftest.py  test_ansi.py  test_buffer.py  test_content_search.py  test_cursor.py  test_display.py  test_field.py  test_input.py  test_layout.py  test_scroll_column.py  test_scroll_latency.py  test_status_line.py  test_tree_overlay.py  test_view_manager.py
