[project]
name = "pytest-freethreaded"
version = "0.1.0"
description = "Parallel test execution for free-threaded Python builds"
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"
keywords = ["pytest", "parallel", "free-threaded", "nogil", "testing"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=9.0.2",
]

[project.entry-points.pytest11]
freethreaded = "pytest_freethreaded.plugin"

[dependency-groups]
dev = [
    "pytest-cov>=6.0",
    "pyright>=1.1",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_freethreaded"]

[tool.pytest.ini_options]
addopts = ["--freethreaded", "auto"]

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
typeCheckingMode = "standard"
reportPrivateUsage = false
ignore = ["tests/unit_tests"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "FURB",  # refurb
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["pytest_freethreaded"]
