[project]
name = "pytest-threadpool"
dynamic = ["version"]
description = "Parallel test execution for free-threaded Python builds"
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"
keywords = ["pytest", "parallel", "free-threaded", "nogil", "testing", "threadpool", "pytest parallel"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=9.0.2",
]

[project.entry-points.pytest11]
threadpool = "pytest_threadpool.plugin"

[dependency-groups]
dev = [
    "pytest-cov>=6.0",
    "pyright>=1.1",
    "ruff>=0.9",
]

examples = [
    "selenium>=4.41.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytest_threadpool/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_threadpool"]

[tool.pytest.ini_options]
addopts = ["--threadpool", "auto"]
norecursedirs = ["cases"]

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
typeCheckingMode = "standard"
reportPrivateUsage = false
ignore = ["tests/unit_tests", "src/pytest_threadpool/_version.py"]

[tool.ruff]
target-version = "py313"
exclude = ["src/pytest_threadpool/_version.py"]
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "FURB",  # refurb
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["pytest_threadpool"]
